[project]
name = "esmfold-http-service"
version = "0.1.0"
description = "Minimal HTTP service for folding amino acid sequences into PDB files with ESMFold"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "torch>=2.2,<3.0",
  "transformers==4.47.1",
  "accelerate>=0.33,<1.0",
  "safetensors>=0.4,<1.0",
]

[tool.uv]
package = false
